welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
if (vuBiscuit() == 1 ) {
	return true;
}else { 
	return false;
}
}
droite () 
if (haveBaggle() == false ) {
	avance()
	
}else { 
	gauche()
}

